# Learn_SystemC

./: CMakeLists.txt  README.md  adder.cpp  test_adder.cpp  test_play_systemc_types.cpp
